# text_to_sparql

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ground_truth_ids.csv  pyproject.toml
outputs/: outputs.txt
results/benchmark/embedding_models/: benchmark.py
results/benchmark/models/: ground_truth_ner.csv  ner_benchmark.py
results/benchmark/with_neighbors/: __init__.py
results/gerbil/: gerbil_evaluation.py
src/: main.py
src/agent/: agent.py  graph.py  image.py  nodes.py  prompts.py  state.py  workflow.py  workflow2.py
src/benchmark/: benchmark.py  gerbil_evaluation.py
src/config/: config.py
src/databases/mongo/: mongo.py  test_db.py
src/databases/mongo/models/: AgentStep.py  Embedding_QALD_10.py
src/databases/qdrant/: insert.py  insert_dump.py  insert_few_shot.py  insert_wikidata_labels.py  qdrant.py  search_embeddings.py
src/dataset/: lcquad2_0.py  qald_10.json  qald_10.py  qald_10_results_embedings.py
src/http_client/: session.py
src/llm/: chat_with_hf.py  chat_with_ollama.py  embed_examples.py  embed_labels.py  generic_chat.py  generic_llm.py  gpt_chat.py  llm_provider.py
src/streamlit/: app.py  multilingual_benchmark.py  outputs.py  streamlit.py
src/templates/: evaluation.py  ner.py  schema.py  sparql.py  zero_shot_sparql.py
src/tools/: graph_context.py  ner.py  schema.py  sparql.py  tools.py
src/utils/: append_missing_questions_benchmark.py  calculate_ids_ratio.py  convert_to_qald_json_format.py  extract_previous_queries.py  extract_qids.py  format_candidates.py  format_candidates_clean.py  format_candidates_for_prompt.py  format_entities.py  format_examples.py  format_uri.py  get_ids.py  json__extraction.py  keword-ratio_results.py  map_candidates.py  merge_gold_results.py  openrouter_free_models_list.py  outputs_analysis.py  query_keywords.py  re_ranking.py  result_analisys.py
src/wikidata/: api.py  dumps.py  prefixes.py
src/wikidata/dump_download/: dump_download.py
src/wikidata/dump_processing/: preprocess_dump.py  reader_process.py  worker_process.py  writer_process.py
text_to_sparql/: main.py
text_to_sparql/databases/qdrant/: insert.py  qdrant.py  search_embeddings.py
text_to_sparql/dataset/: lcquad2_0.py
text_to_sparql/llm/: chat.py  embed_content.py  generic_chat.py
text_to_sparql/templates/: ner.py  sparql.py  zero_shot_sparql.py
text_to_sparql/utils/: format_examples.py  format_results.py  json__extraction.py  trim_and_load_json.py
text_to_sparql/wikidata/: api.py
