[tool.poetry]
name = "text-to-sparql"
version = "0.1.0"
description = ""
authors = ["Dimitar Pavlovski dimitar.pavlovski12@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
langchain = "^0.3.13"
rmrkl = "^0.0.3"
prompts = "^0.0.1"
langchain-community = "^0.3.13"
langchain-ollama = "^0.2.2"
pydantic-ai = "^0.0.17"
sparqlwrapper = "^2.0.0"
datasets = "^3.2.0"
qdrant-client = "^1.12.2"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
