[tool.poetry]
name = "text-to-sparql"
version = "0.1.0"
description = ""
authors = ["Dimitar Pavlovski dimitar.pavlovski12@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
langchain = "^0.3.20"
rmrkl = "^0.0.3"
prompts = "^0.0.1"
langchain-community = "^0.3.19"
langchain-ollama = "^0.2.2"
pydantic-ai = "^0.0.36"
sparqlwrapper = "^2.0.0"
datasets = "^3.3.2"
qdrant-client = "^1.13.3"
pymongo = "^4.11.2"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.1"
pywikibot = "^10.0.0"
transformers = "==4.50.3"
torch = "^2.6.0"
wikidata = "==0.8.1"
ujson = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
